added h1 and p tag to homepage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+   <h1>Hiking Spots</h1> 
+   <p>When you join Microsoft Rewards, you'll earn points just for using Bing</p>
 </body>
 </html>
