upload the web site components

--- a/index.html
+++ b/index.html
@@ -1,13 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-   <h1>Hiking Spots</h1> 
-   <p>When you join Microsoft Rewards, you'll earn points just for using Bing</p>
+
+    <h1>Nairobi National Park</h1>
+    <p>Nairobi National Park is Located in the Heart of Nairobi City, Kenya. It is one of the best National Parks in
+        Afrika.The Park not only redfines the modern sports facility architecture but also serves as the catalyst and
+        cornerstone of the Kenya's Capital Nairobi.</p>
+    <img src="big5/t1.jpg" alt="Kenya Safari" width="300px">
+    <img src="big5/t4.jpg" alt="Kenya Safari" width="300px">
+    <img src="big5/big-five-2.jpg" alt="Picture of Big Five" width="300px">
+    <img src="big5/t3.jpg" alt="Kenya Safari" width="300px">
+    <img src="big5/t5.jpg" alt="Kenya Safari" width="300px">
+    <h2>Information Guide</h2>
+    <p>Nairobi National Park is Located along Mombasa Road 5miles from Jomo Kenyatta International Airport. The
+        following are point of Contacts:</p>
+    <ul>
+        <li>Manager: Timothy Roberts</li>
+        <li>Ass. Manager: Robert Serembe
+        </li>
+    </ul>
+
+    <p>For direction click <a href> here </a> to get the map of the <strong>National Park</strong></p>
+    <h3>Upcomin Events:- <strong>May-June-July -2023</strong></h3>
+    <ul>
+        <li>Free Entrances <em>Inside the Park</em>:</li>
+        <li>Free Parking</li>
+        <li>Bus Tours at<em> Discounted Price</em></li>
+        <li>Nairobi National Park <em>Free Tshirts</em></li>
+        <li>Food Sold Inside the Park will be <em>Tax free</em></li>
+    </ul>
+    <h3>Accomodations</h3>
+    <p>There are so many Luxury Hotels Located Near Nairobi National Park. Guest rooms offer a <em>blend of Victorian
+            elegance and comfort,</em> combined with all the practical, amenities of the modern age. The hotel offers an
+        eclectic mix of dining options, from delectable Thai specialties, an Al fresco dinner with a city view, to an
+        open air bistro café.
+        The bar, with a refined ambiance, set in early 19th century décor, creates an elegant environment ideal for
+        consuming any brew.</p>
+    <img src="big5/ht1.jpg" alt="Accommodations" width="400px" height="270">
+    <img src="big5/ht2.jpg" alt="Accommodations" width="400px">
+    <img src="big5/ht3.jpg" alt="Accommodations" width="400px">
+    <p>Raised on stilts, the restaurant offers breathtaking views of the lush gardens and the Ewaso Nyiro River. The bar
+        is located along the river bank with natural spring water channels where guests can unwind. The swimming pool
+        offers a relaxing spot, further enhanced with an elaborate pool bar that serves refreshing fresh juices, a
+        variety of cocktails, beers and light beverages.
+        Relax and unwind at the spa while listening to the trickling natural streams and sounds of the African jungle.
+        <strong>Nairobi National Park</strong> <em>is the place to visit</em>
+    </p>
+    <h3>Parking and Transportations</h3>
+    <h3>Guest Conduct Policy</h3>
+    <h3>Gate Opening Times</h3>
+    <h3>Ground Rules</h3>
+    <h3>Corporate Partnership</h3>
+
 </body>
+
 </html>
