--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 
 <body>
-
-    <h1>Nairobi National Park</h1>
+    
+        <h1>NAIROBI NATIONAL PARK</h1>
     <p>Nairobi National Park is Located in the Heart of Nairobi City, Kenya. It is one of the best National Parks in
         Afrika.The Park not only redfines the modern sports facility architecture but also serves as the catalyst and
         cornerstone of the Kenya's Capital Nairobi.</p>
@@ -18,15 +18,15 @@
     <img src="big5/t4.jpg" alt="Kenya Safari" width="300px">
     <img src="big5/big-five-2.jpg" alt="Picture of Big Five" width="300px">
     <img src="big5/t3.jpg" alt="Kenya Safari" width="300px">
-    <img src="big5/t5.jpg" alt="Kenya Safari" width="300px">
+    
     <h2>Information Guide</h2>
     <p>Nairobi National Park is Located along Mombasa Road 5miles from Jomo Kenyatta International Airport. The
         following are point of Contacts:</p>
-    <ul>
+    <ol>
         <li>Manager: Timothy Roberts</li>
         <li>Ass. Manager: Robert Serembe
         </li>
-    </ul>
+    </ol>
 
     <p>For direction click <a href> here </a> to get the map of the <strong>National Park</strong></p>
     <h3>Upcomin Events:- <strong>May-June-July -2023</strong></h3>
@@ -55,10 +55,19 @@
         <strong>Nairobi National Park</strong> <em>is the place to visit</em>
     </p>
     <h3>Parking and Transportations</h3>
+    <p>Nairobi Park Garage is Locate East of the<strong> The main Entrance</strong></p>
+    <img src="big5/G.jpg" alt="Nairobi Park Garage" width="300px">
     <h3>Guest Conduct Policy</h3>
+    <p>Our Tour Guides are friendly, outgoing and helpful, and they will do their very best to make your <strong>TOUR</strong> as enjoyable as possible. Please do not misinterpret their friendliness.
+       Tour Guides are prohibited from engaging in physical relationships with guests. Tour Guides are not permitted to socialize with guests beyond their professional duties, and are not permitted to be in guest staterooms, except for the performance of their shipboard duties.
+       Guests are expected to respect these policies and are similarly prohibited from engaging in physical relationships with Tour Guides. Guests are not permitted in any restricted</p>
     <h3>Gate Opening Times</h3>
-    <h3>Ground Rules</h3>
-    <h3>Corporate Partnership</h3>
+    <p> Gates are open Monday to Friday <strong>9:00AM-4:00PM </strong>and Saturday and Sunday gates open <strong>10:00AM to 5:00PM</strong></p>
+    <h3>SAFETY AND SECURITY</h3>
+    <p>Safety and security are everyone’s responsibility. Should anyone become aware of unsafe or possibly illegal behavior during your tour, they should immediately report this to the <strong>Security Staff</strong> or report to  management.
+       This may be done through Office telephone system by dialing 999 or by seeking the assistance of a Tour Guide.</p>
+    <p><strong><q>DO NOT FEED ANIMALS IN THE PARK UNLESS AND OTHERWISE</q></strong></p>
+    <footer>&copy; <em>Copyright 2023 Robert Serembe</em></footer>
 
 </body>
 
