My Website In Progress

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </li>
     </ol>
 
-    <p>For direction click <a href> here </a> to get the map of the <strong>National Park</strong></p>
+    <p>For direction click <a href="https://www.google.com/maps/place/National+Park,+Nairobi,+Kenya/@-1.3850334,36.5500813,11z/data=!3m1!4b1!4m6!3m5!1s0x182f0e9937822c93:0xd1cdc2510d39efbe!8m2!3d-1.3569641!4d36.8465564!16s%2Fg%2F1tfljt8j"> Map of Nairobi National Park </a></p>
     <h3>Upcomin Events:- <strong>May-June-July -2023</strong></h3>
     <ul>
         <li>Free Entrances <em>Inside the Park</em>:</li>
@@ -64,7 +64,7 @@
     <h3>Gate Opening Times</h3>
     <p> Gates are open Monday to Friday <strong>9:00AM-4:00PM </strong>and Saturday and Sunday gates open <strong>10:00AM to 5:00PM</strong></p>
     <h3>SAFETY AND SECURITY</h3>
-    <p>Safety and security are everyone’s responsibility. Should anyone become aware of unsafe or possibly illegal behavior during your tour, they should immediately report this to the <strong>Security Staff</strong> or report to  management.
+    <p>Safety and security are everyone's responsibility. Should anyone become aware of unsafe or possibly illegal behavior during your tour, they should immediately report this to the <strong>Security Staff</strong> or report to  management.
        This may be done through Office telephone system by dialing 999 or by seeking the assistance of a Tour Guide.</p>
     <p><strong><q>DO NOT FEED ANIMALS IN THE PARK UNLESS AND OTHERWISE</q></strong></p>
     <footer>&copy; <em>Copyright 2023 Robert Serembe</em></footer>
