My Website -Working in Progress

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <p>Nairobi National Park is Located in the Heart of Nairobi City, Kenya. It is one of the best National Parks in
         Afrika.The Park not only redfines the modern sports facility architecture but also serves as the catalyst and
         cornerstone of the Kenya's Capital Nairobi.</p>
-    <img src="big5/t1.jpg" alt="Kenya Safari" width="300px">
-    <img src="big5/t4.jpg" alt="Kenya Safari" width="300px">
-    <img src="big5/big-five-2.jpg" alt="Picture of Big Five" width="300px">
-    <img src="big5/t3.jpg" alt="Kenya Safari" width="300px">
+    <img src="big5/t1.jpg" alt="Kenya Safari" height="186">
+    <img src="big5/t4.jpg" alt="Kenya Safari" height="186">
+    <img src="big5/big-five-2.jpg" alt="Picture of Big Five" height="186">
+    <img src="big5/t3.jpg" alt="Kenya Safari" height="186">
     
     <h2>Information Guide</h2>
     <p>Nairobi National Park is Located along Mombasa Road 5miles from Jomo Kenyatta International Airport. The
@@ -44,9 +44,9 @@
         open air bistro café.
         The bar, with a refined ambiance, set in early 19th century décor, creates an elegant environment ideal for
         consuming any brew.</p>
-    <img src="big5/ht1.jpg" alt="Accommodations" width="400px" height="270">
-    <img src="big5/ht2.jpg" alt="Accommodations" width="400px">
-    <img src="big5/ht3.jpg" alt="Accommodations" width="400px">
+    <img src="big5/ht1.jpg" alt="Accommodations" height="190">
+    <img src="big5/ht2.jpg" alt="Accommodations" height="190">
+    <img src="big5/ht3.jpg" alt="Accommodations" height="190">
     <p>Raised on stilts, the restaurant offers breathtaking views of the lush gardens and the Ewaso Nyiro River. The bar
         is located along the river bank with natural spring water channels where guests can unwind. The swimming pool
         offers a relaxing spot, further enhanced with an elaborate pool bar that serves refreshing fresh juices, a
@@ -55,8 +55,9 @@
         <strong>Nairobi National Park</strong> <em>is the place to visit</em>
     </p>
     <h3>Parking and Transportations</h3>
-    <p>Nairobi Park Garage is Locate East of the<strong> The main Entrance</strong></p>
-    <img src="big5/G.jpg" alt="Nairobi Park Garage" width="300px">
+    <p>Nairobi Park Garage is Located East of the<strong> The main Entrance</strong></p>
+    <p>That is where you can find also <strong>Our Tour Buses </strong> </p>
+    <img src="big5/G.jpg" alt="Nairobi Park Garage" width="300px" height="190">
     <h3>Guest Conduct Policy</h3>
     <p>Our Tour Guides are friendly, outgoing and helpful, and they will do their very best to make your <strong>TOUR</strong> as enjoyable as possible. Please do not misinterpret their friendliness.
        Tour Guides are prohibited from engaging in physical relationships with guests. Tour Guides are not permitted to socialize with guests beyond their professional duties, and are not permitted to be in guest staterooms, except for the performance of their shipboard duties.
