--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <header>
     <h1 id="git_header">NAIROBI NATIONAL PARK</h1>
     <div id="main-banner">
-        <img src="big5/sunset.jpg" alt="sunset in Nairobi" width="6000px">
+        <img src="big5/sunset.jpg" alt="sunset in Nairobi" width="2000">
     </div>
 
-   <img src="big5/t1.jpg" alt="Kenya Safari" height="810">
-    <img src="big5/t4.jpg" alt="Kenya Safari" height="810">
-    <img src="big5/big-five-2.jpg" alt="Picture of Big Five" height="850">
-    <img src="big5/t3.jpg" alt="Kenya Safari" height="850">
+   <img src="big5/t1.jpg" alt="Kenya Safari" height="400">
+    <img src="big5/t4.jpg" alt="Kenya Safari" height="400">
+    <img src="big5/big-five-2.jpg" alt="Picture of Big Five" height="400">
+    <img src="big5/t3.jpg" alt="Kenya Safari" height="400">
 
     <p>Nairobi National Park is Located in the Heart of Nairobi City, Kenya. It is one of the best National Parks in
         Afrika.The Park not only redfines the modern sports facility architecture but also serves as the catalyst and
@@ -53,9 +53,9 @@
         open air bistro café.
         The bar, with a refined ambiance, set in early 19th century décor, creates an elegant environment ideal for
         consuming any brew.</p>
-    <img src="big5/ht1.jpg" alt="Accommodations" height="800" width="2000">
-    <img src="big5/ht2.jpg" alt="Accommodations" height="800" width="2000">
-    <img src="big5/ht3.jpg" alt="Accommodations" height="800" width="2000">
+    <img src="big5/ht1.jpg" alt="Accommodations" height="400" width="300">
+    <img src="big5/ht2.jpg" alt="Accommodations" height="400" width="300">
+    <img src="big5/ht3.jpg" alt="Accommodations" height="400" width="300">
     <p>Raised on stilts, the restaurant offers breathtaking views of the lush gardens and the Ewaso Nyiro River. The bar
         is located along the river bank with natural spring water channels where guests can unwind. The swimming pool
         offers a relaxing spot, further enhanced with an elaborate pool bar that serves refreshing fresh juices, a
@@ -66,9 +66,9 @@
     <h3>Parking and Transportations</h3>
     <p>Nairobi Park Garage is Located East of the<strong> The main Entrance</strong></p>
     <p>That is where you can also find <strong>Our Tour Buses </strong> </p>
-    <img src="big5/park.jpg" alt="Nairobi Park Garage" width="2000" height="800">
-    <img src="big5/G.jpg" alt="Nairobi Park Garage" width="2000" height="800">
-    <img src="big5/buses.jpg" alt="Tour Buses" width="2000" height="800">
+    <img src="big5/park.jpg" alt="Nairobi Park Garage" width="300" height="400">
+    <img src="big5/G.jpg" alt="Nairobi Park Garage" width="300" height="400">
+    <img src="big5/buses.jpg" alt="Tour Buses" width="300" height="400">
     <h3>Guest Conduct Policy</h3>
     <p>Our Tour Guides are friendly, outgoing and helpful, and they will do their very best to make your <strong>
             TOUR</strong> as enjoyable as possible. Please do not misinterpret their friendliness.
