--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header>
     <h1 id="git_header">NAIROBI NATIONAL PARK</h1>
     <div id="main-banner">
-        <img src="big5/sunset.jpg" alt="sunset in Nairobi" width="2000">
+        <img src="big5/sunset.jpg" alt="sunset in Nairobi" width="2000" class="center">
     </div>
 
    <img src="big5/t1.jpg" alt="Kenya Safari" height="400">
