--- a/index.html
+++ b/index.html
@@ -1,96 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-<header>
-    <h1 id="git_header">NAIROBI NATIONAL PARK</h1>
-    <div id="main-banner">
-        <img src="big5/sunset.jpg" alt="sunset in Nairobi" width="4500px">    </div>
-
-   <img src="big5/t1.jpg" alt="Kenya Safari" height="600px">
-    <img src="big5/t4.jpg" alt="Kenya Safari" height="600px">
-    <img src="big5/big-five-2.jpg" alt="Picture of Big Five" height="600px">
-    <img src="big5/t3.jpg" alt="Kenya Safari" height="600px">
-
-    <p>Nairobi National Park is Located in the Heart of Nairobi City, Kenya. It is one of the best National Parks in
-        Afrika.The Park not only redfines the modern sports facility architecture but also serves as the catalyst and
-        cornerstone of the Kenya's Capital Nairobi.</p>
-
-    <h2 class="first_text">Information Guide</h2>
-    <p>Nairobi National Park is Located along Mombasa Road 5miles from Jomo Kenyatta International Airport. The
-        following are point of Contacts:</p>
-    <ol>
-        <li>Manager: Timothy Roberts</li>
-        <li>Ass. Manager: Robert Serembe</li>
-    </ol>
-
-    <p>For direction click <a href="https://www.google.com/maps/place/National+Park,
-        +Nairobi,+Kenya/@-1.3850334,36.5500813,11z/data=!3m1!4b1!4m6!3m5!1s0x182f0e99
-        37822c93:0xd1cdc2510d39efbe!8m2!3d-1.3569641!4d36.8465564!16s%2Fg%2F1tfljt8j">
-            Map of Nairobi National Park </a></p>
-    <h3 class="first_text">Upcoming Events:- <strong>May-June-July -2023</strong></h3>
+    <div class="main">
+        <div class="navbar">
+            <div class="icon">
+                <h2 class="logo">M&J BROTHERS</h2>
+    </div>
+    <div class="Menu"></div>
     <ul>
-        <li>Free Entrances <em>Inside the Park</em>:</li>
-        <li>Free Parking</li>
-        <li>Bus Tours at<em> Discounted Price</em></li>
-        <li>Nairobi National Park <em>Free Tshirts</em></li>
-        <li>Food Sold Inside the Park will be <em>Tax free</em></li>
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">ABOUT US</a></li>
+        <li><a href="#">OUR SERVICES</a></li>
+        <li><a href="#">NEWS</a></li>
+        <li><a href="#">OUR CLIENTS</a></li>
+        <li><a href="#">HOW TO CONTACTS US</a></li>
     </ul>
-    <h3 class="first_text">Accomodations</h3>
-    <p>There are so many Luxury Hotels Located Near Nairobi National Park. Guest rooms offer a <em>blend of Victorian
-            elegance and comfort,</em> combined with all the practical, amenities of the modern age. The hotel offers an
-        eclectic mix of dining options, from delectable Thai specialties, an Al fresco dinner with a city view, to an
-        open air bistro café.
-        The bar, with a refined ambiance, set in early 19th century décor, creates an elegant environment ideal for
-        consuming any brew.</p>
-    <img src="big5/ht1.jpg" alt="Accommodations" height="600px" width="1400px">
-    <img src="big5/ht2.jpg" alt="Accommodations" height="600px" width="1400px">
-    <img src="big5/ht3.jpg" alt="Accommodations" height="600px" width="1400px">
-    <p>Raised on stilts, the restaurant offers breathtaking views of the lush gardens and the Ewaso Nyiro River. The bar
-        is located along the river bank with natural spring water channels where guests can unwind. The swimming pool
-        offers a relaxing spot, further enhanced with an elaborate pool bar that serves refreshing fresh juices, a
-        variety of cocktails, beers and light beverages.
-        Relax and unwind at the spa while listening to the trickling natural streams and sounds of the African jungle.
-        <strong>Nairobi National Park</strong> <em>is the place to visit</em>
-    </p>
-    <h3>Parking and Transportations</h3>
-    <p>Nairobi Park Garage is Located East of the<strong> The main Entrance</strong></p>
-    <p>That is where you can also find <strong>Our Tour Buses </strong> </p>
-    <img src="big5/park.jpg" alt="Nairobi Park Garage" width="1400px" height="600px">
-    <img src="big5/G.jpg" alt="Nairobi Park Garage" width="1400px" height="600px">
-    <img src="big5/buses.jpg" alt="Tour Buses" width="1400px" height="600px">
-    <h3>Guest Conduct Policy</h3>
-    <p>Our Tour Guides are friendly, outgoing and helpful, and they will do their very best to make your <strong>
-            TOUR</strong> as enjoyable as possible. Please do not misinterpret their friendliness.
-        Tour Guides are prohibited from engaging in physical relationships with guests. Tour Guides are not permitted
-        to socialize with guests beyond their professional duties, and are not permitted to be in guest staterooms,
-        except for the performance of their shipboard duties.
-        Guests are expected to respect these policies and are similarly prohibited from engaging in physical
-        relationships
-        with Tour Guides. Guests are not permitted in any restricted</p>
-    <h3>Gate Opening Times</h3>
-    <p> Gates are open Monday to Friday <strong>9:00AM-4:00PM </strong>and Saturday and Sunday gates open
-        <strong>10:00AM
-            to 5:00PM</strong></p>
-    <h3>SAFETY AND SECURITY</h3>
-    <p>Safety and security are everyone's responsibility. Should anyone become aware of unsafe or possibly illegal
-        behavior
-        during your tour, they should immediately report this to the <strong>Security Staff</strong> or report to
-        management.
-        This may be done through Office telephone system by dialing 999 or by seeking the assistance of a Tour Guide.
-    </p>
-    <p><strong><q>DO NOT FEED ANIMALS IN THE PARK. FOLLOW THE TOUR GUIDE INSTRUCTIONS AT ALL TIMES</q></strong></p>
-    <footer>&copy; <em>Copyright 2023 Robert Serembe</em></footer>
-</header>
-</body>
+    </div>
+    <div class="search">
+        <input class="srch" type="search" name="" placeholder="Type to text">
+        <a href="#"> <button class="btn"> Search</button></a>
 
+    </div>
+    <div class="big5-sunset"></div>
+
+</body>
+<   
 </html>
