--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     </div>
     <div class="Menu"></div>
     <ul>
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">ABOUT US</a></li>
-        <li><a href="#">OUR SERVICES</a></li>
-        <li><a href="#">NEWS</a></li>
-        <li><a href="#">OUR CLIENTS</a></li>
-        <li><a href="#">HOW TO CONTACTS US</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">News</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Contacts</a></li>
     </ul>
     </div>
     <div class="search">
@@ -31,5 +31,5 @@
     <div class="big5-sunset"></div>
 
 </body>
-<   
+
 </html>
