--- a/index.html
+++ b/index.html
@@ -1,35 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>M&J Discovers</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+
+<body style="
+    background-image: url('big5/t1.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;">
     <div class="main">
+        <h2 class="logo">M&J Discovers</h2>
         <div class="navbar">
             <div class="icon">
-                <h2 class="logo">M&J BROTHERS</h2>
-    </div>
-    <div class="Menu"></div>
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Jobs</a></li>
-        <li><a href="#">Contacts</a></li>
-    </ul>
-    </div>
-    <div class="search">
-        <input class="srch" type="search" name="" placeholder="Type to text">
-        <a href="#"> <button class="btn"> Search</button></a>
 
+            </div>
+            <div class="Menu"></div>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Jobs</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+        </div>
+        <div class="search">
+            <input class="srch" type="search" name="" placeholder="Type to text">
+            <a href="#"> <button class="btn"> Search</button></a>
+        </div>
+        <div id="blue"></div>
     </div>
-    <div class="big5-sunset"></div>
-<div id="blue">blue</div>
+    <header>
+        <h1 align="center">Experts with real experience</h1>
+        <p class="test" style="text-align:center">Here at <strong>M&J Discovers,</strong> We know that our clients are passionate and
+            discerning travellers looking for authentic, exciting and meaningful experiences on holiday. Our team are enthusiastic,
+            dedicated and passionate about travel and will put their heart and soul into creating an unforgettable holiday for you and
+            your family that’s tailored to your exact requirements.</p>
+        <h2 align="center">The World's Best Destinations</h2>
+        <h2 align="center">Holiday Ideas for Summer 2023 & beyond</h2>
+        <h2 class="first_text" align="center">Winter Escapes for 2023/24</h2>
+        <h2 class="first_text" align="center"></h2>
+        <h3 id="git_header" align="center">Customers Feed Backs</h3>
+        <h3 class="first_text" align="center">Our Next Discoveries</h3>
+    </header>
+    <footer></footer>
 </body>
 
 </html>
