--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     <header>
         <h1 align="center">Experts with real experience</h1>
-        <p class="test" style="text-align:center">Here at <strong>M&J Discovers,</strong> We know that our clients are passionate and
+        <p class="test" style="text-align:center">Here at <strong><a href>M&J Discovers,</strong></a> We know that our clients are passionate and
             discerning travellers looking for authentic, exciting and meaningful experiences on holiday. Our team are enthusiastic,
             dedicated and passionate about travel and will put their heart and soul into creating an unforgettable holiday for you and
             your family that’s tailored to your exact requirements.</p>
@@ -48,7 +48,7 @@
         <h3 id="git_header" align="center">Customers Feed Backs</h3>
         <h3 class="first_text" align="center">Our Next Discoveries</h3>
     </header>
-    <footer></footer>
+    <footer> &copy; Robert Serembe- M&J Discovers Website </footer>
 </body>
 
 </html>
