--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;">
+    <div id="'bar"></div>
     <div class="main">
         <h2 class="logo">M&J Discovers</h2>
         <div class="navbar">
@@ -22,10 +23,10 @@
             </div>
             <div class="Menu"></div>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Jobs</a></li>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="News.html">News</a></li>
+                <li><a href="Jobs.html">Jobs</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
         </div>
@@ -37,11 +38,24 @@
     </div>
     <header>
         <h1 align="center">Experts with real experience</h1>
-        <p class="test" style="text-align:center">Here at <strong><a href>M&J Discovers,</strong></a> We know that our clients are passionate and
-            discerning travellers looking for authentic, exciting and meaningful experiences on holiday. Our team are enthusiastic,
-            dedicated and passionate about travel and will put their heart and soul into creating an unforgettable holiday for you and
+        <p class="test" style="text-align:center">Here at <strong><a href>M&J Discovers,</strong></a> We know that our
+            clients are passionate and
+            discerning travellers looking for authentic, exciting and meaningful experiences on holiday. Our team are
+            enthusiastic,
+            dedicated and passionate about travel and will put their heart and soul into creating an unforgettable
+            holiday for you and
             your family that’s tailored to your exact requirements.</p>
         <h2 align="center">The World's Best Destinations</h2>
+
+        <li font-size="100" align="center">
+            <li>Olympic Mountains</li>
+            <li>Disney World</li>
+            <li>Amazon</li>
+            <li>South African Safari</li>
+            <li>Mt. Kilimanjaro and Mt. Kenya</li>
+            <li>The Maasai Mara-Kenya</li>
+        </li>
+
         <h2 align="center">Holiday Ideas for Summer 2023 & beyond</h2>
         <h2 class="first_text" align="center">Winter Escapes for 2023/24</h2>
         <h2 class="first_text" align="center"></h2>
