--- a/index.html
+++ b/index.html
@@ -5,64 +5,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M&J Discovers</title>
-    <link rel="stylesheet" href="style.css">
+    <title>M&J Discoveries</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
-<body style="
-    background-image: url('big5/t1.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;">
-    <div id="'bar"></div>
-    <div class="main">
-        <h2 class="logo">M&J Discovers</h2>
-        <div class="navbar">
-            <div class="icon">
-
-            </div>
-            <div class="Menu"></div>
-            <ul>
-                <li><a href="Home.html">Home</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="News.html">News</a></li>
-                <li><a href="Jobs.html">Jobs</a></li>
-                <li><a href="#">Contacts</a></li>
-            </ul>
-        </div>
-        <div class="search">
-            <input class="srch" type="search" name="" placeholder="Type to text">
-            <a href="#"> <button class="btn"> Search</button></a>
-        </div>
-        <div id="blue"></div>
-    </div>
+<body>
     <header>
-        <h1 align="center">Experts with real experience</h1>
-        <p class="test" style="text-align:center">Here at <strong><a href>M&J Discovers,</strong></a> We know that our
-            clients are passionate and
-            discerning travellers looking for authentic, exciting and meaningful experiences on holiday. Our team are
-            enthusiastic,
-            dedicated and passionate about travel and will put their heart and soul into creating an unforgettable
-            holiday for you and
-            your family that’s tailored to your exact requirements.</p>
-        <h2 align="center">The World's Best Destinations</h2>
 
-        <li font-size="100" align="center">
-            <li>Olympic Mountains</li>
-            <li>Disney World</li>
-            <li>Amazon</li>
-            <li>South African Safari</li>
-            <li>Mt. Kilimanjaro and Mt. Kenya</li>
-            <li>The Maasai Mara-Kenya</li>
-        </li>
+        <h1>M&J Tours and Discoveries</h1>
 
-        <h2 align="center">Holiday Ideas for Summer 2023 & beyond</h2>
-        <h2 class="first_text" align="center">Winter Escapes for 2023/24</h2>
-        <h2 class="first_text" align="center"></h2>
-        <h3 id="git_header" align="center">Customers Feed Backs</h3>
-        <h3 class="first_text" align="center">Our Next Discoveries</h3>
+        <div class="dropdown">
+            <button onclick="myfunction()" class="dropdown">Dropdown</button>
+            <div id="myDropdown" class="dropdown-content">
+            <a href="#">HOME</a>
+            <a href="#">ABOUT US</a>
+            <a href="#">DISCOUNTS</a>
+            <a href="#">NEWS</a>
+            <a href="#">OUR CUSTOMERS</a>
+            <a href="#">HOW TO CONTACT US</a>
+        </div>
+    </div>
     </header>
-    <footer> &copy; Robert Serembe- M&J Discovers Website </footer>
+    <main>
+        <section id ="About Us">
+            <h2> About Us</h2>
+            <p><strong>M&J Tours Discover </strong>the World has been at the forefront of bespoke tourism since 2000. In
+                that time, we’ve
+                become one of the Washington's leading independent specialist travel companies.</p>
+        </section>
+        <section id ="Destinations">
+            <h3>Our Destinations </h3>
+            <img src="big5/t1.jpg" alt="Maasai MAra" width="500px">
+            <p>
+                When you set out for the finest Touring destinations in the world,
+                you deserve an elevated charter experience managed by the best <strong>M&J Tour Discoveries</strong> in
+                the industry. Our team has the knowledge you need to have the experience
+                of a lifetime including secret anchorages, quiet spots, and not-to-miss experiences in each location.
+                Some of the destinations not in the list are <a href="Services.html">here</a>
+            </p>
+            <ol>
+                <li>Cairo</li>
+                <li>Paris</li>
+                <li>Italy</li>
+                <li>Johansburg</li>
+                <li>Brazil</li>
+                <li>Nairobi, Kenya</li>
+            </ol><br>
+        </section>
+        <section id ="Sales">
+            <h3>Discover our Sales</h3>
+            <img src="big5/ap.jpg" alt="Airplane"
+            <ul>
+                <li>Flight to Cairo...$3500</li>
+                <li>Flight to Paris...$5000</li>
+                <li>Flight to Italy...$5000</li>
+                <li>Flight to Johansburg...$6000</li>
+                <li>Flight to Brazil....$7000</li>
+                <li>Flight to Kenya...$5000</li>
+            </ul>
+        </section>
+        <section id ="Book">
+            <h3>Why Book with us?</h3>
+            <p>Treat Yourself with Our Hotels. Don’t Miss a Beat While You’re in Town. Book Now. Experience the Location You Want at a Price You’ll Love and Gather Glittering Memories. Interactive Map. Verified Guest Reviews. Mobile Friendly Website. Secure Payments. 24/7 Customer Support. 1 Million Places to Stay. Price Match Guarantee. Loyalty Program. Types: Vacation Homes, Condos, Apartments.</p>
+            </section>
+
+
+    </main>
+    <footer>&copy Robert Serembe under-construction</footer>
 </body>
 
 </html>
