--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <section id ="About Us">
             <h2> About Us</h2>
-            <p><strong>M&J Tours Discover </strong>the World has been at the forefront of bespoke tourism since 2000. In
+            <p><strong>M&J Tours Discover </strong>the World has been at the forefront of bespoke tourism since 2000.Name a travel style or preference and there’s a tour company out there that caters to it—though not all travel tour companies are created equally. To help plan your next jaunt to destinations near and far, we rounded up some of the best tour companies out there, whether you’re a food-obsessed jetsetter, wish to lean into hidden histories, or want maximum adventure on a budget. In
                 that time, we’ve
                 become one of the Washington's leading independent specialist travel companies.</p>
         </section>
