Website Under Construction

--- a/Services.html
+++ b/Services.html
@@ -7,7 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Services under construction</h1>
-    <a href="index.html" >Come Back to Home page</a>
+    <h1><strong>Our Services</strong></h1>
+    <p>Affordable, multi-day adventures are offered to numerous destinations around the world in addition to its mission to give back to the community and environment. </p>
+    <p>Luxurious yet engaging itineraries to remote locales are ideal for inquisitive minds.</p>
+    <p>Traveling with Salt & Wind means food-first activities, luxe accommodations, and itineraries designed with founders’ firsthand experience.</p>
+    <h2>Final Verdict</h2>
+    <p>Tour companies for every travel style and interest offer everything from dedicated departures to custom planned trips—from long weekends to weeks long adventures.</p>
+    <h3>Methodology</h3>
+    <p>We combed through dozens of tour companies and filtered for great service, amenities, unique itineraries for a variety of travel styles, and customer reviews. Bonus consideration was given to tour companies offering specialized touches as well as family-friendly and solo travel-friendly offerings. We also assessed travel companies’ environmentally- and socially-conscious policies.</p>
+   <img src="big5/bus.jpg" alt="Our Buses">
+   <img src="big5/bus1.jpg" alt="Our Buses">
+   <img src="big5/buses.jpg" alt="Our Buses"><br>
+    <a href="index.html" color="red">Click to go Home</a>
 </body>
 </html>
