--- a/index.html
+++ b/index.html
@@ -17,23 +17,27 @@
         <div class="dropdown">
             <button onclick="myfunction()" class="dropdown">Dropdown</button>
             <div id="myDropdown" class="dropdown-content">
-            <a href="#">HOME</a>
-            <a href="#">ABOUT US</a>
-            <a href="#">DISCOUNTS</a>
-            <a href="#">NEWS</a>
-            <a href="#">OUR CUSTOMERS</a>
-            <a href="#">HOW TO CONTACT US</a>
+                <a href="#">HOME</a>
+                <a href="#">ABOUT US</a>
+                <a href="#">DISCOUNTS</a>
+                <a href="#">NEWS</a>
+                <a href="#">OUR CUSTOMERS</a>
+                <a href="#">HOW TO CONTACT US</a>
+            </div>
         </div>
-    </div>
     </header>
     <main>
-        <section id ="About Us">
+        <section id="About Us">
             <h2> About Us</h2>
-            <p><strong>M&J Tours Discover </strong>the World has been at the forefront of bespoke tourism since 2000.Name a travel style or preference and there’s a tour company out there that caters to it—though not all travel tour companies are created equally. To help plan your next jaunt to destinations near and far, we rounded up some of the best tour companies out there, whether you’re a food-obsessed jetsetter, wish to lean into hidden histories, or want maximum adventure on a budget. In
+            <p><strong>M&J Tours Discover </strong>the World has been at the forefront of bespoke tourism since
+                2000.Name a travel style or preference and there’s a tour company out there that caters to it—though not
+                all travel tour companies are created equally. To help plan your next jaunt to destinations near and
+                far, we rounded up some of the best tour companies out there, whether you’re a food-obsessed jetsetter,
+                wish to lean into hidden histories, or want maximum adventure on a budget. In
                 that time, we’ve
                 become one of the Washington's leading independent specialist travel companies.</p>
         </section>
-        <section id ="Destinations">
+        <section id="Destinations">
             <h3>Our Destinations </h3>
             <img src="big5/t1.jpg" alt="Maasai MAra" width="500px">
             <p>
@@ -52,22 +56,24 @@
                 <li>Nairobi, Kenya</li>
             </ol><br>
         </section>
-        <section id ="Sales">
+        <section id="Sales">
             <h3>Discover our Sales</h3>
-            <img src="big5/ap.jpg" alt="Airplane"
-            <ul>
-                <li>Flight to Cairo...$3500</li>
-                <li>Flight to Paris...$5000</li>
-                <li>Flight to Italy...$5000</li>
-                <li>Flight to Johansburg...$6000</li>
-                <li>Flight to Brazil....$7000</li>
-                <li>Flight to Kenya...$5000</li>
+            <img src="big5/ap.jpg" alt="Airplane" <ul>
+            <li>Flight to Cairo...$3500</li>
+            <li>Flight to Paris...$5000</li>
+            <li>Flight to Italy...$5000</li>
+            <li>Flight to Johansburg...$6000</li>
+            <li>Flight to Brazil....$7000</li>
+            <li>Flight to Kenya...$5000</li>
             </ul>
         </section>
-        <section id ="Book">
+        <section id="Book">
             <h3>Why Book with us?</h3>
-            <p>Treat Yourself with Our Hotels. Don’t Miss a Beat While You’re in Town. Book Now. Experience the Location You Want at a Price You’ll Love and Gather Glittering Memories. Interactive Map. Verified Guest Reviews. Mobile Friendly Website. Secure Payments. 24/7 Customer Support. 1 Million Places to Stay. Price Match Guarantee. Loyalty Program. Types: Vacation Homes, Condos, Apartments.</p>
-            </section>
+            <p> Affordable, multi-day adventures are offered to numerous destinations around the world in addition to its mission to give back to the community and environment.Treat Yourself with Our Hotels. Don’t Miss a Beat While You’re in Town. Book Now. Experience the Location
+                You Want at a Price You’ll Love and Gather Glittering Memories. Interactive Map. Verified Guest Reviews.
+                Mobile Friendly Website. Secure Payments. 24/7 Customer Support. 1 Million Places to Stay. Price Match
+                Guarantee. Loyalty Program. Types: Vacation Homes, Condos, Apartments.</p>
+        </section>
 
 
     </main>
