--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 you deserve an elevated charter experience managed by the best <strong>M&J Tour Discoveries</strong> in
                 the industry. Our team has the knowledge you need to have the experience
                 of a lifetime including secret anchorages, quiet spots, and not-to-miss experiences in each location.
-                Some of the destinations not in the list are <a href="Services.html">here</a>
+                Some of the destinations not in the list are <a href="Services.html">For Information Click HERE</a>
             </p>
             <ol>
                 <li>Cairo</li>
