trying 2column layout

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <main>
         <section id="About Us">
             <h2> About Us</h2>
+            <img src="big5/sunset.jpg" alt="Sunset" width="350"/>
             <p><strong>M&J Tours Discover </strong>the World has been at the forefront of bespoke tourism since
                 2000.Name a travel style or preference and there’s a tour company out there that caters to it—though not
                 all travel tour companies are created equally. To help plan your next jaunt to destinations near and
@@ -56,7 +57,7 @@
                 <li>Nairobi, Kenya</li>
             </ol><br>
         </section>
-        <section id="Sales">
+        <section id="Discover Our Sales">
             <h3>Discover our Sales</h3>
             <img src="big5/ap.jpg" alt="Airplane" <ul>
             <li>Flight to Cairo...$3500</li>
@@ -67,7 +68,7 @@
             <li>Flight to Kenya...$5000</li>
             </ul>
         </section>
-        <section id="Book">
+        <section id="Booking">
             <h3>Why Book with us?</h3>
             <p> Affordable, multi-day adventures are offered to numerous destinations around the world in addition to its mission to give back to the community and environment.Treat Yourself with Our Hotels. Don’t Miss a Beat While You’re in Town. Book Now. Experience the Location
                 You Want at a Price You’ll Love and Gather Glittering Memories. Interactive Map. Verified Guest Reviews.
