--- a/index.html
+++ b/index.html
@@ -11,25 +11,27 @@
 
 <body>
     <header>
+        <div class="wrapper">
+            <h1>M&J Tours and Discoveries</h1>
 
-        <h1>M&J Tours and Discoveries</h1>
-
-        <div class="dropdown">
-            <button onclick="myfunction()" class="dropdown">Dropdown</button>
-            <div id="myDropdown" class="dropdown-content">
-                <a href="#">HOME</a>
-                <a href="#">ABOUT US</a>
-                <a href="#">DISCOUNTS</a>
-                <a href="#">NEWS</a>
-                <a href="#">OUR CUSTOMERS</a>
-                <a href="#">HOW TO CONTACT US</a>
+            <div class="dropdown">
+                <button onclick="myfunction()" class="dropdown">Dropdown</button>
+                <div id="myDropdown" class="dropdown-content">
+                    <a href="home">HOME</a>
+                    <a href="about us">ABOUT US</a>
+                    <a href="discounts">DISCOUNTS</a>
+                    <a href="news">NEWS</a>
+                    <a href="our customers">OUR CUSTOMERS</a>
+                    <a href="how to contact us">HOW TO CONTACT US</a>
+                </div>
             </div>
         </div>
+
     </header>
     <main>
         <section id="About Us">
             <h2> About Us</h2>
-            <img src="big5/sunset.jpg" alt="Sunset" width="350"/>
+            <img src="big5/sunset.jpg" alt="Sunset" width="350" />
             <p><strong>M&J Tours Discover </strong>the World has been at the forefront of bespoke tourism since
                 2000.Name a travel style or preference and there’s a tour company out there that caters to it—though not
                 all travel tour companies are created equally. To help plan your next jaunt to destinations near and
@@ -57,7 +59,7 @@
                 <li>Nairobi, Kenya</li>
             </ol><br>
         </section>
-        <section id="Discover Our Sales">
+        <section id="Discover">
             <h3>Discover our Sales</h3>
             <img src="big5/ap.jpg" alt="Airplane" <ul>
             <li>Flight to Cairo...$3500</li>
@@ -70,7 +72,9 @@
         </section>
         <section id="Booking">
             <h3>Why Book with us?</h3>
-            <p> Affordable, multi-day adventures are offered to numerous destinations around the world in addition to its mission to give back to the community and environment.Treat Yourself with Our Hotels. Don’t Miss a Beat While You’re in Town. Book Now. Experience the Location
+            <p> Affordable, multi-day adventures are offered to numerous destinations around the world in addition to
+                its mission to give back to the community and environment.Treat Yourself with Our Hotels. Don’t Miss a
+                Beat While You’re in Town. Book Now. Experience the Location
                 You Want at a Price You’ll Love and Gather Glittering Memories. Interactive Map. Verified Guest Reviews.
                 Mobile Friendly Website. Secure Payments. 24/7 Customer Support. 1 Million Places to Stay. Price Match
                 Guarantee. Loyalty Program. Types: Vacation Homes, Condos, Apartments.</p>
