--- a/index.html
+++ b/index.html
@@ -5,84 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M&J Discoveries</title>
+    <title>M$J Discoveries</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header>
-        <div class="wrapper">
-            <h1>M&J Tours and Discoveries</h1>
-
-            <div class="dropdown">
-                <button onclick="myfunction()" class="dropdown">Dropdown</button>
-                <div id="myDropdown" class="dropdown-content">
-                    <a href="home">HOME</a>
-                    <a href="about us">ABOUT US</a>
-                    <a href="discounts">DISCOUNTS</a>
-                    <a href="news">NEWS</a>
-                    <a href="our customers">OUR CUSTOMERS</a>
-                    <a href="how to contact us">HOW TO CONTACT US</a>
-                </div>
-            </div>
+    <div class="wrapper">
+        <div class="logo">
+            <img src="big5/logo.jpg" width="120px" height="150px">
         </div>
+        <ul class="nav-menu">
+            <li><a href="home">Home</a></li>
+            <li><a href="about us">ABOUT US</a></li>
+            <li><a href="discounts">DISCOUNTS</a></li>
+            <li> <a href="news">NEWS</a></li>
+            <li><a href="our customers">OUR CUSTOMERS</a></li>
+            <li> <a href="how to contact us">HOW TO CONTACT US</a></li>
 
-    </header>
-    <main>
-        <section id="About Us">
-            <h2> About Us</h2>
-            <img src="big5/sunset.jpg" alt="Sunset" width="350" />
-            <p><strong>M&J Tours Discover </strong>the World has been at the forefront of bespoke tourism since
-                2000.Name a travel style or preference and there’s a tour company out there that caters to it—though not
-                all travel tour companies are created equally. To help plan your next jaunt to destinations near and
-                far, we rounded up some of the best tour companies out there, whether you’re a food-obsessed jetsetter,
-                wish to lean into hidden histories, or want maximum adventure on a budget. In
-                that time, we’ve
-                become one of the Washington's leading independent specialist travel companies.</p>
-        </section>
-        <section id="Destinations">
-            <h3>Our Destinations </h3>
-            <img src="big5/t1.jpg" alt="Maasai MAra" width="500px">
-            <p>
-                When you set out for the finest Touring destinations in the world,
-                you deserve an elevated charter experience managed by the best <strong>M&J Tour Discoveries</strong> in
-                the industry. Our team has the knowledge you need to have the experience
-                of a lifetime including secret anchorages, quiet spots, and not-to-miss experiences in each location.
-                Some of the destinations not in the list are <a href="Services.html">For Information Click HERE</a>
-            </p>
-            <ol>
-                <li>Cairo</li>
-                <li>Paris</li>
-                <li>Italy</li>
-                <li>Johansburg</li>
-                <li>Brazil</li>
-                <li>Nairobi, Kenya</li>
-            </ol><br>
-        </section>
-        <section id="Discover">
-            <h3>Discover our Sales</h3>
-            <img src="big5/ap.jpg" alt="Airplane" <ul>
-            <li>Flight to Cairo...$3500</li>
-            <li>Flight to Paris...$5000</li>
-            <li>Flight to Italy...$5000</li>
-            <li>Flight to Johansburg...$6000</li>
-            <li>Flight to Brazil....$7000</li>
-            <li>Flight to Kenya...$5000</li>
-            </ul>
-        </section>
-        <section id="Booking">
-            <h3>Why Book with us?</h3>
-            <p> Affordable, multi-day adventures are offered to numerous destinations around the world in addition to
-                its mission to give back to the community and environment.Treat Yourself with Our Hotels. Don’t Miss a
-                Beat While You’re in Town. Book Now. Experience the Location
-                You Want at a Price You’ll Love and Gather Glittering Memories. Interactive Map. Verified Guest Reviews.
-                Mobile Friendly Website. Secure Payments. 24/7 Customer Support. 1 Million Places to Stay. Price Match
-                Guarantee. Loyalty Program. Types: Vacation Homes, Condos, Apartments.</p>
-        </section>
+        </ul>
+    </div>
+    <div class=" head-text">
+        <h1>M&J Tours and Discoveries</h1></div>
 
-
-    </main>
-    <footer>&copy Robert Serembe under-construction</footer>
 </body>
 
 </html>
